--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,27 @@
   text-decoration: none;
   margin-left: 40px;
 }
+.main header .menu-toggle {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+}
+.main header .menu-toggle span {
+  width: 30px;
+  height: 3px;
+  background: whitesmoke;
+  margin: 5px 0;
+  transition: 0.3s;
+}
+.main header .menu-toggle.active span:nth-child(1) {
+  transform: rotate(45deg) translate(8px, 8px);
+}
+.main header .menu-toggle.active span:nth-child(2) {
+  opacity: 0;
+}
+.main header .menu-toggle.active span:nth-child(3) {
+  transform: rotate(-45deg) translate(10px, -10px);
+}
 .main .content {
   position: relative;
   width: 100%;
@@ -125,19 +146,33 @@
   transform: translateY(-5px);
 }
 
-@media (max-width: 600px) {
-  .main {
-    padding: 20px;
+@media (max-width: 768px) {
+  .main header {
+    position: relative;
   }
-  .main .content .text h2 {
-    margin-top: 40px;
+  .main header .menu-toggle {
+    display: flex;
+    z-index: 3000;
   }
-  .footer {
-    flex-direction: row-reverse;
+  .main header .nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: radial-gradient(#bb526e, #b3355a, #8d1d3f);
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
+    gap: 40px;
+    transform: translateY(-100%);
+    transition: transform 0.4s ease;
+    z-index: 2000;
   }
-  .footer .sci {
-    margin-top: 40px;
-    margin-right: -80px;
+  .main header .nav.active {
+    transform: translateY(0);
+  }
+  .main header .nav li a {
+    font-size: 2em;
   }
 }/*# sourceMappingURL=styles.css.map */
