--- a/css/styles.scss
+++ b/css/styles.scss
@@ -42,6 +42,31 @@
                 }
             }
         }
+
+        .menu-toggle {
+            display: none;
+            flex-direction: column;
+            cursor: pointer;
+            span {
+                width: 30px;
+                height: 3px;
+                background: whitesmoke;
+                margin: 5px 0;
+                transition: 0.3s;
+            }
+        }
+
+        .menu-toggle.active span:nth-child(1) {
+            transform: rotate(45deg) translate(8px, 8px);
+        }
+
+        .menu-toggle.active span:nth-child(2) {
+            opacity: 0;
+        }
+
+        .menu-toggle.active span:nth-child(3) {
+            transform: rotate(-45deg) translate(10px, -10px);
+        }
     }
 
     .content {
@@ -122,7 +147,6 @@
         
         .sci {
             display: flex;
-
             li {
                 list-style: none;
                 a {
@@ -140,25 +164,40 @@
     }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
     .main {
-        padding: 20px;
-        .content {
-            .text {
-                h2 {
-                    margin-top: 40px;
-                }
+        header {
+            position: relative;
+
+            .menu-toggle {
+                display: flex;
+                z-index: 3000;
             }
-        }
-    }
 
-    .footer {
-        flex-direction: row-reverse;
-        align-items: center;
+            .nav {
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100vw;
+                height: 100vh;
+                background: radial-gradient(#bb526e, #b3355a, #8d1d3f);
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                gap: 40px;
 
-        .sci {
-            margin-top: 40px;
-            margin-right: -80px;
+                transform: translateY(-100%);
+                transition: transform 0.4s ease;
+                z-index: 2000;
+            }
+
+            .nav.active {
+                transform: translateY(0);
+            }
+
+            .nav li a {
+                font-size: 2em;
+            }
         }
     }
 }
